# NestedModels

./: pyproject.toml
nestedmodels/: __init__.py  config.py  default_transformations.py  metrics.py  model.py  utils.py
testdata/: example.toml
tests/: config_test.py  test.ipynb
tests/data/: VOLVO ACP Data.xlsx  advertising_config.toml  advertising_dataset.xlsx  example.toml  example2.toml  volvo_germany_optimizer.xlsx
